--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
                         </span>
                     </div>
                 </nav>
-                <section>
+                <section class="flex">
+                    <div id="notFoundMessage" style="display: none;">Menu yang dicari tidak ditemukan</div>
 
                     <div class="isi">
                         <div class="foto">
@@ -185,14 +186,12 @@
                         <h1>Rp. 35.000</h1>
                     </div>
                 </section>
+
             </div>
 
         </div>
         <div class="payment">
             <Button id="bayar">
-                <span class="material-symbols-outlined" style="color: #eee !important;  font-size: 21px;">
-                    shopping_cart
-                </span>
                 <span>
                     <p class="checkout">Checkout</p>
                 </span>
